--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
     "@babel/node": "^7.6.1",
-    "@babel/preset-env": "^7.6.0"
+    "@babel/preset-env": "^7.6.0",
+    "body-parser": "^1.19.0",
+    "underscore": "^1.9.1"
   }
 }
