--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.6.0",
     "@babel/node": "^7.6.1",
     "@babel/preset-env": "^7.6.0",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "underscore": "^1.9.1"
   }
