--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
@@ -26,6 +25,9 @@
     "@babel/preset-env": "^7.6.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.1",
+    "mongoose-unique-validator": "^2.0.3",
     "underscore": "^1.9.1"
   }
 }
